Session gets created.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ApiSettings": {
+    "SessionApiUrl": "https://v2-api.obilet.com/api/client/getsession"
+  },
   "AllowedHosts": "*"
 }
+
+
+  //api key could be here, but because I didn't want to take risks about leaking the api key, I just wanted to use singleton design pattern
+  //so that once the app is up and running, we could read the api key once and use it until the app dies.
