Implemented the GetBusLocations Api for static queries.

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ApiSettings": {
-    "SessionApiUrl": "https://v2-api.obilet.com/api/client/getsession"
+    "SessionApiUrl": "https://v2-api.obilet.com/api/client/getsession",
+    "BusLocationsApiUrl": "https://v2-api.obilet.com/api/location/getbuslocations"
   },
   "AllowedHosts": "*"
 }
