--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
   },
   "ApiSettings": {
     "SessionApiUrl": "https://v2-api.obilet.com/api/client/getsession",
-    "BusLocationsApiUrl": "https://v2-api.obilet.com/api/location/getbuslocations"
+    "BusLocationsApiUrl": "https://v2-api.obilet.com/api/location/getbuslocations",
+    "JourneysApiUrl": "https://v2-api.obilet.com/api/journey/getbusjourneys"
   },
   "AllowedHosts": "*"
 }
