Minor fix of api service base.

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "ApiSettings": {
+    "ObiletApiKey": "API_KEY_HERE",
     "SessionApiUrl": "https://v2-api.obilet.com/api/client/getsession",
     "BusLocationsApiUrl": "https://v2-api.obilet.com/api/location/getbuslocations",
     "JourneysApiUrl": "https://v2-api.obilet.com/api/journey/getbusjourneys"
