Modularized the front-end code.

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,14 +6,10 @@
     }
   },
   "ApiSettings": {
-    "ObiletApiKey": "API_KEY_HERE",
+    "ObiletApiKey": "API_KEY_HERE", //Dont type Basic or Bearer here. The ApiKey should look like jYtx78sxaq
     "SessionApiUrl": "https://v2-api.obilet.com/api/client/getsession",
     "BusLocationsApiUrl": "https://v2-api.obilet.com/api/location/getbuslocations",
     "JourneysApiUrl": "https://v2-api.obilet.com/api/journey/getbusjourneys"
   },
   "AllowedHosts": "*"
 }
-
-
-  //api key could be here, but because I didn't want to take risks about leaking the api key, I just wanted to use singleton design pattern
-  //so that once the app is up and running, we could read the api key once and use it until the app dies.
