Fixed search box bugs. Moved the code into production.

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,13 @@
     }
   },
   "ApiSettings": {
-    "ObiletApiKey": "API_KEY_HERE", //Dont type Basic or Bearer here. The ApiKey should look like jYtx78sxaq
+    "ObiletApiKey": "INPUT_API_KEY_HEREE", //Dont type Basic or Bearer here. Type the rest of it, if it starts with Basic.
+
+    //Example:
+    //Basic jrt2Saq24tsaswe => Your api key
+
+    //"ObiletApiKey": "jrt2Saq24tsaswe"
+
     "SessionApiUrl": "https://v2-api.obilet.com/api/client/getsession",
     "BusLocationsApiUrl": "https://v2-api.obilet.com/api/location/getbuslocations",
     "JourneysApiUrl": "https://v2-api.obilet.com/api/journey/getbusjourneys"
